--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "bower": "~1.3.12"
   },
+  "engines" : {
+    "node": "0.10.x"
+  },
   "scripts": {
-    "postinstall": "bundle exec rake bower:install"
+    "postinstall": "./node_modules/bower/bin/bower cache clean && ./node_modules/bower/bin/bower install"
   }
 }
