--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "node": "0.10.x"
   },
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower cache clean && ./node_modules/bower/bin/bower install"
+    "postinstall": "./node_modules/.bin/bower cache clean && ./node_modules/.bin/bower install"
   }
 }
