Allow a user to specify an access token for development

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,10 @@
 AUTOMATIC_CLIENT_ID='your-client-id'
 AUTOMATIC_CLIENT_SECRET='your-client-secret'
 
+AUTOMATIC_ACCESS_TOKEN='user-token'
+
 SECRET_KEY_BASE='secret'
 
 MAPBOX_ACCESS_TOKEN='123'
+
+PORT='port to run the app'
