--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "email": "nate@theklaibers.com",
     "url": "http://www.automatic.com"
   },
+  "license": "Apache-2.0",
   "dependencies": {
     "bower": "~1.3.12"
   },
